Revert "[BUGFIX] <th> text-align center"
This reverts commit 9cfbe4290c493f19f9af63c9c0442c7e85097551.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,10 +28,6 @@ html, body {
   min-height: 100%;
 }
 
-th {
-  text-align: center;
-}
-
 .overlay {
   position: fixed;
   top: 0;
